# sbctool

./: BUILDING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO_NEXT_SESSION.md  dockerbuild.sh  sbctool_progress_2025-09-03.txt  sbctool_progress_2025-09-05.txt  verify_transfer.sh
.github/workflows/: build.yml
crates/sbctool/: Cargo.toml
crates/sbctool/src/: log_collector.rs  main.rs  ssh_session.rs  system_info.rs  tui.rs
