[workspace]
members = [
    "crates/sbctool",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
shellexpand = "3.1.1"
ssh2 = "0.9.5"
ssh_config = "0.1.0"
